# mcge-axum-api

./: .env  Cargo.toml  README.md  data.db
migrations/: 20240320133231_create_users.up.sql  20240323060801_create_counters.up.sql
src/: api.rs  db.rs  main.rs
src/api/: counter.rs  jwt.rs  user.rs
