[package]
name = "mcge-axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tower-http = { version = "0.5.2", features = ["trace", "request-id", "util"]}
tower = "0.4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite", "time" ] }
dotenvy = "0.15"
time = { version = "0.3.31", features = ["serde-human-readable"]}
anyhow = "1.0.81"
jsonwebtoken = "9"